--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   </h1>
   <p class="subtitle">텔레그램으로 이동합니다</p>
 
-  <a href="https://t.me/+ChL8kcOedPZhY2Fl" class="cta">
+  <a href="https://t.me/+0dS9zLUiNqI5NTZl" class="cta">
     지금 입장하기 →
   </a>
 
@@ -168,7 +168,7 @@
 </div>
 
 <script>
-  const TELEGRAM_LINK = "https://t.me/+ChL8kcOedPZhY2Fl";
+  const TELEGRAM_LINK = "https://t.me/+0dS9zLUiNqI5NTZl";
   let countdown = 2;
 
   const timer = setInterval(() => {
